<b><u> v1.17a, 18.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Correct some Movers and Unitframes i forgot. Sorry about that. :/

<b><u> v1.17, 18.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Actionbars: Change the OOR-Check to be on Keybindtext and not on the Button. Disabled by default. (Credits: Blazeflack (Code), Darth Predator for the help and Sapzies (Idea)) - http://www.tukui.org/forums/topic.php?id=35421
<font color=#FF8C00>&#9830;</font> Misc: Cleanup the Options.
<font color=#FF8C00>&#9830;</font> Misc: Move the Skin Menu to its own Tab.
<font color=#FF8C00>&#9830;</font> Skins: Add Skin for the EncounterJournal. (ClassColor for: Encounter.Title and Encounter.Info)
<font color=#FF8C00>&#9830;</font> Skins: Add Skin for SpellBook. (Removing the Parchement) (Credits: Darth Predator)
<font color=#FF8C00>&#9830;</font> Install: Add a new Texture to the Right Chat Frame only if ElvUI_SLE is enable, because of the Texture Alpha.
<font color=#FF8C00>&#9830;</font> Install: Adjust the DPS Layout. I hope you like it. :)

<b><u> v1.16, 12.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> Install: Remove the BigWigs Profile from the install.
<font color=#FF8C00>&#9830;</font> Install: Adjust Player, Party & RaidFrames a bit.
<font color=#FF8C00>&#9830;</font> Skins: Skin a few MasterPlan Buttons.
<font color=#FF8C00>&#9830;</font> Unitframes: Add Options for the SVUI Role Icons (Credit Benik)
<font color=#FF8C00>&#9830;</font> AFK: Add Lurky to the AFK Screen (and he is dancing and do the "brblbrlbrl" Sound D:)
<font color=#FF8C00>&#9830;</font> Chat: Move the friendalert.lua to the Chat Folder and hopefully finaly fix the Overwatch Icon.

<b><u> v1.15, 05.01.2016</b></u>
<font color=#FF8C00>&#9830;</font> GameMenu: Adjust the MerathilisUI Config Button to be on Top of the GameMenu.
<font color=#FF8C00>&#9830;</font> GameMenu: Adjust the PlayerModel SetCamDistanceScale.